# data-engineering-labs-and-projects

./: .gitignore  MakeFile  README.md  docker-compose.yml
dimensional-modeling-nyc-collisions/: Makefile  README.md  example.env  pyproject.toml
dimensional-modeling-nyc-collisions/scripts/: ingest_dataset.py  inspect_dataset.py
dimensional-modeling-nyc-collisions/sql/: profile_dataset.sql  staging_schema.sql
